syntax = "proto3";

package blocksync;

import "p2p/proto/common.proto";
import "p2p/proto/consensus.proto";

message Status {
  PeerID peer_id = 1;
  uint64 height = 2;
}

message Request {
  uint64 height = 1;
}

message Response {
  ConsensusMessage proposal = 1;
  repeated ConsensusMessage commits = 2;
  bytes block_bytes = 3;
}
